--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<embed src="taeert-architecture.pdf" width="800px" height="2100px" />
+<html>
+<head>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
+    </style>
+</head>
+<body>
+<div class="imgbox">
+    <img class="center-fit" src='taeert-architecture.jpg'>
+</div>
+</body>
+</html>
